...
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"/>

            <!-- Filter Button -->
            <Button
                android:id="@+id/filterEventsBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Filter Events"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"/>
...
